{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 1577,
  "lineage": "f741ceb1-326b-efde-e456-a618bf5f87f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:375289373927:targetgroup/target/8a9352c287a2cfa2",
            "arn_suffix": "targetgroup/target/8a9352c287a2cfa2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375289373927:targetgroup/target/8a9352c287a2cfa2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3f9626df384ac23",
            "domain": "vpc",
            "id": "eipalloc-0b3f9626df384ac23",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-72-28-100.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.72.28.100",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:internet-gateway/igw-02e1b5757b3f18766",
            "id": "igw-02e1b5757b3f18766",
            "owner_id": "375289373927",
            "tags": {
              "WP_gateway": "value"
            },
            "tags_all": {
              "WP_gateway": "value"
            },
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:375289373927:loadbalancer/app/Task/b09a6c012bc97f5a",
            "arn_suffix": "app/Task/b09a6c012bc97f5a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Task-515050581.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375289373927:loadbalancer/app/Task/b09a6c012bc97f5a",
            "idle_timeout": 90,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Task",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09149c0bdf55bd280"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00bda44b8699b25aa"
              },
              {
                "subnet_id": "subnet-053421697c6fd7279"
              },
              {
                "subnet_id": "subnet-0a7da4d0ea0099152"
              }
            ],
            "subnets": [
              "subnet-00bda44b8699b25aa",
              "subnet-053421697c6fd7279",
              "subnet-0a7da4d0ea0099152"
            ],
            "vpc_id": "vpc-0b0c60d75ea5e84ce",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.first-tier",
            "aws_subnet.public",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:375289373927:listener/app/Task/b09a6c012bc97f5a/24029b544e04fcbf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:375289373927:targetgroup/target/8a9352c287a2cfa2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:375289373927:listener/app/Task/b09a6c012bc97f5a/24029b544e04fcbf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:375289373927:loadbalancer/app/Task/b09a6c012bc97f5a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.this",
            "aws_lb.web_lb",
            "aws_security_group.first-tier",
            "aws_subnet.public",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3f9626df384ac23",
            "connectivity_type": "public",
            "id": "nat-0e9fade5e3a4332e0",
            "network_interface_id": "eni-0c83cef13329d432b",
            "private_ip": "10.0.1.137",
            "public_ip": "3.72.28.100",
            "subnet_id": "subnet-00bda44b8699b25aa"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:route-table/rtb-02b22972a170494a2",
            "id": "rtb-02b22972a170494a2",
            "owner_id": "375289373927",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e9fade5e3a4332e0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app_route_table"
            },
            "tags_all": {
              "Name": "app_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:route-table/rtb-05758608eee109b3b",
            "id": "rtb-05758608eee109b3b",
            "owner_id": "375289373927",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Database_route_table"
            },
            "tags_all": {
              "Name": "Database_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:route-table/rtb-00a4e33f8251b87e4",
            "id": "rtb-00a4e33f8251b87e4",
            "owner_id": "375289373927",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e1b5757b3f18766",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ALB_route_table"
            },
            "tags_all": {
              "Name": "ALB_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09decffe4d55bfc4e",
            "route_table_id": "rtb-02b22972a170494a2",
            "subnet_id": "subnet-075d4f67d1ec17aa9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.app",
            "aws_subnet.app",
            "aws_subnet.public",
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094c1606441ad9d17",
            "route_table_id": "rtb-02b22972a170494a2",
            "subnet_id": "subnet-0b1780e3f360d1c93"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.app",
            "aws_subnet.app",
            "aws_subnet.public",
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ddf1fc306dffc9a",
            "route_table_id": "rtb-02b22972a170494a2",
            "subnet_id": "subnet-07e29d00eb714ea98"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.app",
            "aws_subnet.app",
            "aws_subnet.public",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b4c0178cdab67dc",
            "route_table_id": "rtb-05758608eee109b3b",
            "subnet_id": "subnet-0471694d380d74a2e"
          },
          "dependencies": [
            "aws_route_table.db",
            "aws_subnet.db",
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcff0e4fe89e64a8",
            "route_table_id": "rtb-05758608eee109b3b",
            "subnet_id": "subnet-02c08c5144d27c165"
          },
          "dependencies": [
            "aws_route_table.db",
            "aws_subnet.db",
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fef88b923d12697",
            "route_table_id": "rtb-05758608eee109b3b",
            "subnet_id": "subnet-0cc45d868e4c3b68a"
          },
          "dependencies": [
            "aws_route_table.db",
            "aws_subnet.db",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08633c236787b7a0e",
            "route_table_id": "rtb-00a4e33f8251b87e4",
            "subnet_id": "subnet-00bda44b8699b25aa"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcb68c15f49791cb",
            "route_table_id": "rtb-00a4e33f8251b87e4",
            "subnet_id": "subnet-0a7da4d0ea0099152"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1cbb342a1d92869",
            "route_table_id": "rtb-00a4e33f8251b87e4",
            "subnet_id": "subnet-053421697c6fd7279"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "first-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:security-group/sg-09149c0bdf55bd280",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from the ALB to the Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09149c0bdf55bd280",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from Internet to the ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb20230217142441246600000001",
            "name_prefix": "alb",
            "owner_id": "375289373927",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:security-group/sg-02b3cfe8b36d1f897",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b3cfe8b36d1f897",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1184724026c8e48"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-20230217142446710500000004",
            "name_prefix": "rds-",
            "owner_id": "375289373927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS_SG"
            },
            "tags_all": {
              "Name": "RDS_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.first-tier",
            "aws_security_group.second-tier",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "second-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:security-group/sg-0e1184724026c8e48",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from the ALB to the Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1184724026c8e48",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB to the ASG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09149c0bdf55bd280"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from Internet to the ASG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09149c0bdf55bd280"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app20230217142443789500000002",
            "name_prefix": "app",
            "owner_id": "375289373927",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.first-tier",
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:subnet/subnet-075d4f67d1ec17aa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075d4f67d1ec17aa9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375289373927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-Ec2-0"
            },
            "tags_all": {
              "Name": "private-subnet-Ec2-0"
            },
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:subnet/subnet-0b1780e3f360d1c93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1780e3f360d1c93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375289373927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-Ec2-1"
            },
            "tags_all": {
              "Name": "private-subnet-Ec2-1"
            },
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:subnet/subnet-07e29d00eb714ea98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e29d00eb714ea98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375289373927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-Ec2-2"
            },
            "tags_all": {
              "Name": "private-subnet-Ec2-2"
            },
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:subnet/subnet-0471694d380d74a2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0471694d380d74a2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375289373927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-RDS-0"
            },
            "tags_all": {
              "Name": "private-subnet-RDS-0"
            },
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:subnet/subnet-02c08c5144d27c165",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c08c5144d27c165",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375289373927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-RDS-1"
            },
            "tags_all": {
              "Name": "private-subnet-RDS-1"
            },
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:subnet/subnet-0cc45d868e4c3b68a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc45d868e4c3b68a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375289373927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-RDS-2"
            },
            "tags_all": {
              "Name": "private-subnet-RDS-2"
            },
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:subnet/subnet-00bda44b8699b25aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bda44b8699b25aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375289373927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-ALB-1"
            },
            "tags_all": {
              "Name": "public-subnet-ALB-1"
            },
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:subnet/subnet-0a7da4d0ea0099152",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7da4d0ea0099152",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375289373927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-ALB-2"
            },
            "tags_all": {
              "Name": "public-subnet-ALB-2"
            },
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:subnet/subnet-053421697c6fd7279",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053421697c6fd7279",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375289373927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-ALB-3"
            },
            "tags_all": {
              "Name": "public-subnet-ALB-3"
            },
            "vpc_id": "vpc-0b0c60d75ea5e84ce"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:375289373927:vpc/vpc-0b0c60d75ea5e84ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094e701985515cf4a",
            "default_route_table_id": "rtb-0b90a57db16d9f600",
            "default_security_group_id": "sg-00a374f0ca4488494",
            "dhcp_options_id": "dopt-0d1bf03c52b518362",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b0c60d75ea5e84ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b90a57db16d9f600",
            "owner_id": "375289373927",
            "tags": {
              "Name": "yes"
            },
            "tags_all": {
              "Name": "yes"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}